--- a/style.css
+++ b/style.css
@@ -179,6 +179,9 @@ h1, p {
 }
 
 @media (min-width: 1024px) {
+  body {
+    background-image: url(images/bg-intro-desktop.png);
+  }
   .container {
     display: flex;
     max-width: 1110px;
