--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ h1, p {
   padding-top: 24px;
   padding-bottom: 24px;
   border-radius: 10px;
+  box-shadow: 0px 8px 0px 0px hsla(0, 0%, 0%, 0.15);
 }
 
 .form-controls {
